Enhance ticket attachments UI and preview features
Added clickable attachment cards and improved attachment preview functionality in both ticket management and modal components. Introduced loading states, file type icons, and download actions for attachments. Updated styles for better visual feedback and accessibility. Refactored Angular and SCSS code to support previewing images and PDFs, and improved attachment handling in ticket messages and new ticket creation.

--- a/Angular/src/app/sidebar/sidebar.component.html
+++ b/Angular/src/app/sidebar/sidebar.component.html
@@ -23,7 +23,7 @@
           </a>
         </li>
         <li class="ng-star-inserted">
-          <a href="#" (click)="logout()">
+          <a href="/clearportal/login" (click)="logout()">
             <i class="nc-icon nc-button-power"></i>
             <p>LogOut</p>
           </a>
