--- a/Angular/src/app/pages/ticket-management/ticket-management.component.html
+++ b/Angular/src/app/pages/ticket-management/ticket-management.component.html
@@ -10,12 +10,6 @@
       </div>
     </div>
     <div class="header-actions">
-      <!-- Ticket count -->
-      <span class="ticket-count">
-        <i class="fas fa-inbox"></i>
-        {{filteredTickets.length}} ticket trovati
-      </span>
-
       <!-- Archive button (BackOffice & WebOps) -->
       <button 
         *ngIf="!isAdmin" 
@@ -72,9 +66,15 @@
   <div class="filters-section">
     <div class="filter-header">
       <h3><i class="fas fa-filter"></i> Filtri di Ricerca</h3>
-      <button class="btn-filter" (click)="toggleFilters()">
-        <i class="fas" [class.fa-chevron-up]="showFilters" [class.fa-chevron-down]="!showFilters"></i>
-      </button>
+      <div class="filter-header-right">
+        <span class="ticket-count">
+          <i class="fas fa-inbox"></i>
+          {{filteredTickets.length}} ticket trovati
+        </span>
+        <button class="btn-filter" (click)="toggleFilters()">
+          <i class="fas" [class.fa-chevron-up]="showFilters" [class.fa-chevron-down]="!showFilters"></i>
+        </button>
+      </div>
     </div>
     
     <div class="filters-grid" [class.filters-grid-visible]="showFilters">
